# ReAdapt

./: .gitignore  README.md  config.py  main.py  packages.txt  pyproject.toml  requirements.txt  template.tex
pages/: home.py
utils/: generator.py  parser.py  scraper.py
