[project]
name = "readapt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.67",
    "langchain-google-genai>=2.1.6",
    "langchain[core]>=0.3.26",
    "pdflatex>=0.1.3",
    "pymupdf4llm>=0.0.27",
    "streamlit[pdf]>=1.46.0",
]
